[package]
name = "elering-nps-price-grabber"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
ureq = "2.2"
rust_decimal = "1.16"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = [ "chrono", "decimal", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
syn = "1" # temporary fix, https://github.com/launchbadge/sqlx/issues/2418
